--- a/style.css
+++ b/style.css
@@ -5,12 +5,30 @@
 }
 #form{
     width: 50%;
+    margin-top: 65px;
 }
 #img{
     width 50%;
     clear: left;
     float: left;
 }
+h1{
+    margin-top: 50px;
+    margin-right: 50px;
+}
+h5{
+    margin-top: 20px;
+}
+p{
+    margin-top: 30px;
+}
+
 #login{
     
+}
+h1{
+    
+}
+button{
+
 }
