--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    background-color: black;
-    color: white;
+    /* background-color: black;
+    color: white; */
     margin: 0 auto;
 }
 #form{
@@ -8,7 +8,8 @@
     margin-top: 65px;
 }
 #img{
-    width 50%;
+    width: 50%;
+    height: 100%;
     clear: left;
     float: left;
 }
@@ -19,12 +20,18 @@ h1{
 h5{
     margin-top: 20px;
 }
-p{
-    margin-top: 30px;
+.placeholder{
+    margin-top: 20px;
+    font-size: 20px;
 }
-
 #login{
-    
+       margin-left: 20px;
+}
+#remember{
+
+}
+#forgot{
+
 }
 h1{
     
