--- a/style.css
+++ b/style.css
@@ -13,9 +13,13 @@
     clear: left;
     float: left;
 }
+.username{
+    background-color: beige;
+    text-decoration: dashed;
+}
 h1{
     margin-top: 50px;
-    margin-right: 50px;
+    
 }
 h5{
     margin-top: 20px;
@@ -23,19 +27,33 @@ h5{
 .placeholder{
     margin-top: 20px;
     font-size: 20px;
+    font-size: 1.2em;
 }
 #login{
-       margin-left: 20px;
+       margin-left: 55%;
+}
+#radio{
+    float: left;
+    margin-top: 10px;
 }
 #remember{
-
+    float: left;
+    margin-top: 8px;
 }
 #forgot{
-
-}
-h1{
-    
+    padding-top: 20px;
+    padding-left: 10px;
 }
 button{
-
+    height: 25px;
+    width: 200px;
+    margin-top: 15px;
+}
+a{
+    text-decoration-line:none;
+    color: rgb(0, 0, 255);
+    font-size: large ;
+}
+#user{
+    margin-top: 15px;
 }
