--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ h5{
 }
 #radio{
     float: left;
-    margin-top: 10px;
+    margin-top: 17px;
 }
 #remember{
     float: left;
-    margin-top: 8px;
+    margin-top: 13px;
 }
 #forgot{
     padding-top: 20px;
@@ -48,6 +48,9 @@ button{
     height: 25px;
     width: 200px;
     margin-top: 15px;
+    background-color: rgb(66, 66, 249);
+    color: white;
+    border-radius: 4px;
 }
 a{
     text-decoration-line:none;
@@ -55,5 +58,5 @@ a{
     font-size: large ;
 }
 #user{
-    margin-top: 15px;
+    margin-top: 25px;
 }
