--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0 auto;
-    background-color: rgb(201, 201, 189);
+    background-color: white;
 }
 #form{
     width: 50%;
@@ -13,14 +13,15 @@
     float: left;
 }
 .username{
-    background-color: rgb(232, 205, 205);
+    background-color: rgb(249, 241, 241);
     text-decoration: dashed;
-}
-#username:hover{
-    background-color: black;
+    border-radius: 5px;
+    height: 25px;
+    width: 190px;
+    border: 2px solid black;
 }
 h1{
-    margin-top: 50px;
+    margin-top: 40px;
 }
 h5{
     margin-top: 20px;
@@ -32,6 +33,7 @@ h5{
 }
 #login{
        margin-left: 55%;
+       border: 2 px solid black;
 }
 #radio{
     float: left;
